<resources>
    <string name="app_name">Proyecto_integrador_equipo2</string>
    <string name="nombreEmp">Nombre de Usuario</string>
    <string name="empOpcion2">Productos</string>
    <string name="empOpcion1">Servicios</string>
    <string name="empOpcion3">Reservaciones</string>
    <string name="empOpcion4">Reporte de Ocupacion</string>
    <string name="empOpcion5">Reporte de Ingresos</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="tituloServicios">Servicios</string>
    <string name="retorno"><![CDATA[<--]]></string>
    <string name="tituloProduct">producto</string>
    <string name="tituloReserv">Reservaciones</string>
    <string name="adminOp1">Cuentas Activas</string>
    <string name="nombreAdmin">Administrador</string>
    <string name="tituloCuentas">Cuentas Activas</string>
    <string name="servicioData">Caja Completa   $980 por noche</string>
</resources>